# gt4levrs

./: LICENSE  README.md
UnityProject/: .gitignore
UnityProject/ProjectSettings/: EditorBuildSettings.asset
handtracking/: .gitignore  requirements.txt  setup.cfg
handtracking/src/app/: ProcessManager.py  ThreadManager.py  config.py  main.py
handtracking/src/app/handler/: __init__.py  hand_position_parser.py  hand_selector_parser.py  hand_tracking_process.py  holistic_handler.py  pose_handlers.py  wrapper.py
handtracking/src/app/mediapipeadapter/: __init__.py  mp_body_pose_handler.py  mp_hand_pose_handler.py  mp_utils.py
handtracking/src/app/mediapipeutils/: __init__.py  body_pose_handler.py  hand_pose_handler.py  mediapipe_result_normalizer.py  mediapipe_result_parser.py
handtracking/src/app/threads/: __init__.py  handtracking_workers.py  server_worker.py
handtracking/src/app/utils/: CoordenateConverter.py  LowPassFilter.py  logging_manager.py
handtracking/test/: hand_normalizer_parser.py
handtracking/test_manual/: mediapipe_parser_test.py  mediapipe_test.py  mediapipeworker_test.py
handtracking/test_manual/metrics/: extractor.py  throughput.py  webcam.py
server/app/: server.py  test_handtracking_mesh.py  testehandtracking.py  testhandtracking.py  testserver.py
src/: requirements.txt
src/app/: file_utils.py  server.py  test_handpose_estimation.py  test_handtracking_mesh.py  testhandtracking.py  testserver.py  threading_server.py
src/test/: mediapipeworker_test.py  test_absolute_to_relative_converter.py  test_mediapipe.py  testserver.py
(+89 files in other folders)
