[metadata]
name = handtracking-system-toyoamin
version = 0.0.1
author = Lucas Amin e Rafael Toyomoto
author_email = rafaeltoyo.dev@gmail.com
description = Handtracking using Mediapipe
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rafaeltoyo/unity-vr-server
project_urls =
    Bug Tracker = https://github.com/rafaeltoyo/unity-vr-server/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src